Restore efficient data handling and enable open access for initial testing
Reverts to using `collect` for stream collection and permits all requests for development.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 48d37a9e-f2db-47e6-b506-4050d7998f28
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5c663142-396c-4162-b66a-4f109913be33/9a36b53f-2883-4e11-8770-8c72c7d30ddb.jpg